# rust-analyzer-old

./: crate.json  search-index.js  source-files.js
base_db/: enum.Edition.html  enum.ProcMacroKind.html  struct.Change.html  struct.CrateData.html  struct.CrateDisplayName.html  struct.CrateGraph.html  struct.CrateId.html  struct.CrateName.html  struct.Dependency.html  struct.Env.html  struct.FileId.html  struct.FileSet.html  struct.ProcMacro.html  struct.ProcMacroId.html  struct.SourceRoot.html  struct.VfsPath.html  trait.ProcMacroExpander.html
cfg/: enum.CfgAtom.html  enum.CfgExpr.html  index.html  struct.CfgDiff.html  struct.CfgOptions.html  struct.InactiveReason.html
crate_parser/: Cargo.toml
crates/base_db/: Cargo.toml
crates/cfg/: Cargo.toml
crates/hir_expand/: Cargo.toml
crates/paths/: Cargo.toml
crates/vfs/: Cargo.toml
crates/vfs/src/: file_set.rs  lib.rs  vfs_path.rs
hir/: enum.CfgAtom.html  enum.CfgExpr.html  struct.CfgOptions.html  trait.HirDisplay.html
hir_expand/proc_macro/: struct.ProcMacroExpander.html
ide/: enum.Edition.html  struct.Change.html  struct.CrateGraph.html  struct.CrateId.html  struct.FileId.html  struct.SourceRoot.html
paths/: index.html  struct.AbsPath.html  struct.AbsPathBuf.html  struct.RelPath.html  struct.RelPathBuf.html
rust_analyzer/: all.html
src/cfg/: lib.rs.html  (+1 more)
syntax/: struct.SmolStr.html  struct.SourceFile.html
tt/: struct.SmolStr.html
vfs/: enum.ChangeKind.html  index.html  struct.AbsPath.html  struct.AbsPathBuf.html  struct.ChangedFile.html  struct.FileId.html  struct.Vfs.html  struct.VfsPath.html
(+95 files in other folders)
