[package]
name = "vfs"
version = "0.0.0"
description = "TBD"
license = "MIT OR Apache-2.0"
authors = ["rust-analyzer developers"]
edition = "2018"

[lib]
doctest = false

[dependencies]
rustc-hash = "1.0"
fst = "0.4"
serde = { version = "1.0.106", features = ["derive"] }

paths = { path = "../paths", version = "0.0.0" }
